<resources>
    <string name="app_name">TraininGroup</string>
    <string name="password_hint">Contraseña</string>
    <string name="email_hint">ejemplo@ejemplo.com</string>
    <string name="logo_user">Logo de persona</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_navegacion">navegacion</string>
    <string name="title_home">Deportes</string>
    <string name="title_dashboard">Bailes</string>
    <string name="title_notifications">Artes Marciales</string>
    <string name="buttonSing">Entrar</string>
    <string name="deportes">Deportes</string>
    <string name="bailes">Bailes</string>
    <string name="artes_marciales">Artes Marciales</string>
    <string name="menu_title">Menú</string>
    <string name="perfil">Perfil</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="profile_photo">Foto de perfil</string>
</resources>