<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu"
        android:title="@string/menu_title"
        android:icon="@drawable/ic_menu"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:menuCategory="container">
        <menu>
            <item
                android:id="@+id/action_profile"
                android:title="@string/perfil"

                app:showAsAction="never" />
            <item
                android:id="@+id/action_statistics"
                android:title="@string/estadisticas"

                app:showAsAction="never" />
            <item
                android:id="@+id/action_logout"
                android:title="@string/cerrar_sesion"

                app:showAsAction="never" />
        </menu>
    </item>
</menu>
